tests/cases/ffi/errors/c-header-large-tuple-by-value.ari
@export("ari_take_tuple")
pub fn take_tuple(value: (i64, i64, i64)) -> i64 {
  return value.0 + value.1 + value.2;
}
